k3s/infrastructure/configs/prod/traefik/ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`speedtest-prod.maurovi.ch`)
      services:
        - name: openspeedtest
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ittools-prod.maurovi.ch`)
      services:
        - name: it-tools
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux
  namespace: miniflux
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`miniflux-prod.maurovi.ch`)
      services:
        - name: miniflux
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperlessngx-prod.maurovi.ch`)
      services:
        - name: paperless-ngx
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: recipes
  namespace: recipes
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`recipes-prod.maurovi.ch`)
      services:
        - name: recipes
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vaultwarden-prod.maurovi.ch`)
      services:
        - name: vaultwarden
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cruxify
  namespace: cruxify
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`cruxify-prod.maurovi.ch`)
      services:
        - name: frontend
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin-prod.maurovi.ch`)
      services:
        - name: jellyfin
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyseerr-prod.maurovi.ch`)
      services:
        - name: jellyseerr
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`radarr-prod.maurovi.ch`)
      services:
        - name: radarr
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sonarr-prod.maurovi.ch`)
      services:
        - name: sonarr
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`prowlarr-prod.maurovi.ch`)
      services:
        - name: prowlarr
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`sabnzbd-prod.maurovi.ch`)
      services:
        - name: sabnzbd
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gotify-prod.maurovi.ch`)
      services:
        - name: gotify
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`portainer-prod.maurovi.ch`)
      services:
        - name: portainer
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homarr-prod.maurovi.ch`)
      services:
        - name: homarr
          port: app
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pgadmin-prod.maurovi.ch`)
      services:
        - name: pgadmin
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apprise
  namespace: apprise
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`apprise-prod.maurovi.ch`)
      services:
        - name: apprise
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel-hub
  namespace: beszel
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`beszel-prod.maurovi.ch`)
      services:
        - name: beszel-hub
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gatus-prod.maurovi.ch`)
      services:
        - name: gatus
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana-prod.maurovi.ch`)
      services:
        - name: grafana
          port: service
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`audiobookshelf-prod.maurovi.ch`)
      services:
        - name: audiobookshelf
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lazylibrarian
  namespace: lazylibrarian
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lazylibrarian-prod.maurovi.ch`)
      services:
        - name: lazylibrarian
          port: http
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: goldilocks
  namespace: goldilocks
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`goldilocks-prod.maurovi.ch`)
      services:
        - name: goldilocks-dashboard
          port: http
